--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <!-- src/components/Footer.astro -->
-<footer style="background-color: #333; color: #fff; padding: 1rem; text-align: center;">
+<footer>
   <p>Gabriel León Castro | Data Analyst</p>
   <p>
     <a href="https://github.com/Gaboelc" target="_blank" style="color: #ffa500; text-decoration: none;">GitHub</a> | 
