--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,8 @@
 ---
 // src/pages/index.astro
 import MainLayout from '../layouts/MainLayout.astro';
-import Header from '../components/Header.astro';
-import About from '../components/About.astro';
-import Experience from '../components/Experience.astro';
-import Skills from '../components/Skills.astro';
-import Projects from '../components/Projects.astro';
-import Contact from '../components/Contact.astro';
-import Footer from '../components/Footer.astro';
 ---
-<MainLayout>
-  <Header />
-  <About />
-  <Experience />
-  <Skills />
-  <Projects />
-  <Contact />
-  <Footer />
+<MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
+  <main>
+  </main>
 </MainLayout>
