--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
   <div class="flex items-center">
     <img
-      class="rounded-full h-12 w-12" 
+      class="rounded-full h-16 w-16" 
       src="../../public/images/Gabriel_Leon_Photo.JPG" 
       alt="Gabriel Leon photo" 
     />
@@ -9,7 +9,7 @@
 
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
-    <a href="/about">About</a>
+    <a href="#About">About</a>
     <a href="/portfolio">Portfolio</a>
     <a href="/contact">Contact</a>
   </nav>
