--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
   <script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
   <body>
+    <div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
     <Header />
     <slot />
   </body>
@@ -36,9 +37,10 @@ const { title } = Astro.props;
   }
 
   body {
-    background: #050505;
+    /* background: #050505; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 60vh;
   }
 </style>
