Added gray ring to Header profile photo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 <header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
   <div class="flex items-center">
     <img
-      class="rounded-full h-16 w-16" 
+      class="w-16 h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600" 
       src="../../public/images/Gabriel_Leon_Photo.JPG" 
-      alt="Gabriel Leon photo" 
+      alt="Gabriel Leon" 
     />
   </div>
 
