--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
   }
 
   body {
-    /* background: #050505; */
+    background: #050505;
     display: flex;
     flex-direction: column;
     justify-content: center;
