Experience section done and view height issue fixed

--- a/src/components/Headling.astro
+++ b/src/components/Headling.astro
@@ -11,7 +11,12 @@ import Badge from '../components/Badge.astro';
 	text-gray-400
 	md:text-5xl 
 	lg:text-6xl 
-	dark:text-white"> Hey, I'm Gabriel Leon Castro <a href="https://www.linkedin.com/in/gaboelc/" target="_blank" rel="noopener"><Badge badge='Available for Hire!' /></a></h1>
+	dark:text-white"> Hey, I'm Gabriel Leon Castro 
+		<a href="https://www.linkedin.com/in/gaboelc/" target="_blank" 
+		rel="noopener">
+			<Badge badge='Available for Hire!' />
+		</a>
+</h1>
 
 <p class="mb-6 
 	text-lg 
