--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
+<header class="flex justify-between items-center py-3 w-[1120px] mx-auto mt-6">
   <div class="flex items-center">
     <img
       class="w-16 h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600" 
@@ -10,7 +10,9 @@
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
     <a href="#About">About</a>
-    <a href="/portfolio">Portfolio</a>
-    <a href="/contact">Contact</a>
+    <a href="#Experience">Experience</a>
+    <a href="#Skills">Skills</a>
+    <a href="#Projects">Projects</a>
+    <a href="#Contact">Contact</a>
   </nav>
 </header>
