--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,9 @@ const { title } = Astro.props;
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" initial-scale=1/>
-    <link rel="icon" type="image/svg+xml" href="../../public/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../public/favicon-16x16.png">
     <title>{title}</title>
   </head>
 
@@ -37,10 +39,10 @@ const { title } = Astro.props;
   }
 
   body {
-    background: #050505;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 60vh;
+    background: #0a0a0a;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    min-height: 100vh;
   }
 </style>
