--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,16 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import Headling from '../components/Headling.astro';
 import SocialNetworks from '../components/SocialNetworks.astro';
+import Experience from '../components/Experience.astro';
 ---
 <MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
   <main>
     <section id="About" class="w-full mx-auto lg:w-[850px] py-44"> 
       <Headling />
       <SocialNetworks />
+    </section>
+    <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44 mt-72">
+      <Experience />
     </section>
   </main>
 </MainLayout>
