Refactor About section and add Tittle component
- Refactor the About section in the src/components/About.astro file to use the Tittle component instead of a plain HTML heading.
- Update the content of the About section to include a brief introduction and a description of the data analyst's expertise.
- Remove the unused SocialNetworks component.

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,18 +1,22 @@
 ---
-// src/components/About.astro
+import Tittle from "./Tittle.astro";
 ---
-<section id="about">
-  <h2>About Me</h2>
-  <p>As a Supply Chain Data Analyst at SGF Global, I specialize in transforming 
-	complex datasets into actionable insights that streamline operations and 
-	drive business growth. Leveraging my expertise in Power BI and Python, I 
-	create robust data visualizations and statistical analyses that inform 
-	strategic decisions.</p>
-	<p>With a solid foundation in Data Sciences from LEAD University, my 
-		approach is rooted in precision and a passion for continuous 
-		improvement. I thrive in dynamic environments where my analytical 
-		skills contribute to enhancing processes and service delivery. Looking 
-		ahead, I am eager to further refine my skills and take on more 
-		challenging projects that push the boundaries of data-driven 
-		decision-making.</p>
-</section>
+
+<Tittle title="About" />
+<!-- <h1 class="text-5xl font-extrabold dark:text-white py-6">About</h1> -->
+
+<p class="mb-3 text-lg text-gray-300 md:text-xl dark:text-gray-400">As a 
+	Supply Chain Data Analyst at SGF Global, I specialize in transforming complex 
+	datasets into actionable insights that streamline operations and drive 
+	business growth. Leveraging my expertise in Power BI and Python, I create 
+	robust data visualizations and statistical analyses that inform strategic 
+	decisions.
+</p>
+<p class="text-gray-500 dark:text-gray-300">
+	With a solid foundation in Data Sciences from LEAD University, my approach 
+	is rooted in precision and a passion for continuous improvement. I thrive 
+	in dynamic environments where my analytical skills contribute to enhancing 
+	processes and service delivery. Looking ahead, I am eager to further refine 
+	my skills and take on more challenging projects that push the boundaries of 
+	data-driven decision-making.
+</p>
