--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,4 +1,8 @@
-<h1 class="text-5xl font-extrabold dark:text-white py-6">Experience</h1>
+---
+import Tittle from "./Tittle.astro";
+---
+
+<Tittle title="Experience" />
 
 <ol class="relative border-s border-gray-400 dark:border-gray-700">                  
     <li class="mb-10 ms-4">
