--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@
     <a href="#About">About</a>
     <a href="#Experience">Experience</a>
     <a href="#Skills">Skills</a>
+    <a href="#Education">Education</a>
     <a href="#Projects">Projects</a>
     <a href="#Contact">Contact</a>
   </nav>
