--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '@fontsource/rajdhani/400.css';
 import Header from '../components/Header.astro';
+import '../../styles/global.css';
 
 interface Props{
   title: string;
@@ -20,29 +21,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
 
-  <script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
-
   <body>
     <div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
     <Header />
     <slot />
   </body>
 </html>
-
-<style is:global>
-  :root {
-    color-scheme: light dark;
-  }
-  html {
-    font-family: 'Rajdhani', system-ui, sans-serif;
-    scroll-behavior: smooth;
-  }
-
-  body {
-    background: #0a0a0a;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    min-height: 100vh;
-  }
-</style>
