--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,16 @@
 // src/pages/index.astro
 import MainLayout from '../layouts/MainLayout.astro';
 import Headling from '../components/Headling.astro';
-import SocialNetworks from '../components/SocialNetworks.astro';
+import About from '../components/About.astro';
 import Experience from '../components/Experience.astro';
 ---
 <MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
   <main>
-    <section id="About" class="w-full mx-auto lg:w-[850px] py-44"> 
+    <section class="w-full mx-auto lg:w-[850px] py-44"> 
       <Headling />
-      <SocialNetworks />
+    </section>
+    <section id="About" class="w-full mx-auto lg:w-[850px] py-44 mt-72">
+      <About />
     </section>
     <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44 mt-72">
       <Experience />
