Refactor Header component style and fix view width issue

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto mt-6">
+<header class="flex justify-between items-center py-3 w-full mx-auto mt-6 px-3">
   <div class="flex items-center">
     <img
       class="w-16 h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600" 
