--- a/styles/global.css
+++ b/styles/global.css
@@ -1,29 +1,14 @@
-/* src/styles/global.css */
-/* :root {
+/* section {
+	background-color: #fff;
+} */
+
+:root {
+	color-scheme: light dark;
 	--paynes-gray: #4e5a66;
 	--reseda-green: #6d7863;
 	--white-smoke: #f2f2f2;
 	--jasper: #cd533b;
 	--orange-pantone: #fe5f00;
-}
-
-header {
-	background-color: var(--paynes-gray);
-	color: var(--white-smoke);
-	text-align: center;
-	padding: 1rem;
-}
-
-section {
-	padding: 2rem;
-	margin: 2.5rem 0;
-	background-color: var(--white-smoke);
-	border: 1px solid var(--reseda-green);
-	border-radius: 8px;
-} */
-
-:root {
-	color-scheme: light dark;
 }
 html {
 	font-family: 'Rajdhani', system-ui, sans-serif;
@@ -31,9 +16,9 @@ html {
 }
 
 body {
-	background: #0a0a0a;
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* justify-content: center; */
+	background: #020617;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	min-height: 100vh;
 }
