Styling Headling and removing mt-72 from all sections in index.astro

--- a/src/components/Headling.astro
+++ b/src/components/Headling.astro
@@ -15,10 +15,18 @@ import GitHubIcon from '../icons/GitHubIcon.astro';
 		</div>
 
 		<small class="text-4xl ms-2 font-semibold text-gray-500">
-			+4 years of experience. Data Analyst. From San Jose, Costa Rica.
 			<span class="text-[#FC6D09]">
-				Specialized in creating accurate data analysis.
+				+4 years of experience.
+			</span> 
+			Data Analyst. From San Jose, Costa Rica.
+			<span class="text-[#FC6D09]">
+				SQL, Python, Microsoft Power BI.
 			</span>
+			Skilled in analysis solutions.
+			<span class="text-[#FC6D09]">
+				Collaborative, innovative problem-solver.
+			</span>
+			
 		</small>
 	</section>
 
