--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import Experience from '../components/Experience.astro';
     <section class="w-full mx-auto lg:w-[850px] py-44"> 
       <Headling />
     </section>
-    <section id="About" class="w-full mx-auto lg:w-[850px] py-44 mt-72">
+    <section id="About" class="w-full mx-auto lg:w-[850px] py-44">
       <About />
     </section>
-    <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44 mt-72">
+    <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44">
       <Experience />
     </section>
   </main>
