Skills SVG icons and add Skills component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Headling from '../components/Headling.astro';
 import About from '../components/About.astro';
 import Experience from '../components/Experience.astro';
+import Skills from '../components/Skills.astro';
 ---
 <MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
   <main>
@@ -15,6 +16,9 @@ import Experience from '../components/Experience.astro';
     </section>
     <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44">
       <Experience />
+    </section>
+    <section id="Skills" class="w-full mx-auto lg:w-[850px] py-44">
+      <Skills />
     </section>
   </main>
 </MainLayout>
