--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
   <head>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" initial-scale=1/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="../../public/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../public/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../../public/favicon-16x16.png">
