Refactor SVG icons and add new icons for TensorFlow and Pandas

--- a/src/icons/PowerBIIcon.astro
+++ b/src/icons/PowerBIIcon.astro
@@ -3,6 +3,7 @@
 	xmlns="http://www.w3.org/2000/svg" 
 	fill="none" 
 	preserveAspectRatio="xMidYMid"
+  width="256" height="250" 
 	viewBox="0 0 96 84">
   <defs>
     <linearGradient id="c" x1="66.5" x2="38.5" y1="90.5" y2="8" gradientUnits="userSpaceOnUse">
