--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,20 +1,32 @@
 ---
-import PowerBIIcon from "../icons/PowerBIIcon.astro";
+import Tittle from "./Tittle.astro";
+import PowerBIIcon from "../icons/PowerbiIcon.astro";
 import PythonIcon from "../icons/PythonIcon.astro";
-import MSSQLIcon from "../icons/MSSQLServerIcon.astro";
+import PostgreSQLIcon from "../icons/PostgreSQLIcon.astro";
 import RLanguageIcon from "../icons/RLanguageIcon.astro";
 import MongoDBIcon from "../icons/MongoBDIcon.astro";
 import PowerAppsIcon from "../icons/PowerAppsIcon.astro";
 import PowerAutomateIcon from "../icons/PowerAutomateIcon.astro";
 import AzureIcon from "../icons/AzureIcon.astro";
+import TableauIcon from "../icons/TableauIcon.astro";
+import AWSIcon from "../icons/AWSIcon.astro";
+import TensorFlowIcon from "../icons/TensorFlowIcon.astro";
+import PandasIcon from "../icons/PandasIcon.astro";
 ---
-<div class="columns-4">
-	<PythonIcon class="w-64 h-64"/>
-	<PowerBIIcon class="w-48 h-48"/>
-	<MSSQLIcon class="w-48 h-48"/>
-	<RLanguageIcon class="w-48 h-48"/>
-	<MongoDBIcon class="w-48 h-48"/>
-	<PowerAppsIcon class="w-48 h-48"/>
-	<PowerAutomateIcon class="w-48 h-48"/>
-	<AzureIcon class="w-48 h-48"/>
+
+<Tittle title="Technologies" />
+
+<div class="columns-6">
+	<PythonIcon class="w-24 h-24"/>
+	<RLanguageIcon class="w-24 h-24"/>
+	<TensorFlowIcon class="w-24 h-24"/>
+	<PandasIcon class="w-24 h-24"/>
+	<PostgreSQLIcon class="w-24 h-24"/>
+	<MongoDBIcon class="w-24 h-24"/>
+	<PowerBIIcon class="w-24 h-24"/>
+	<TableauIcon class="w-24 h-24"/>
+	<PowerAppsIcon class="w-24 h-24"/>
+	<PowerAutomateIcon class="w-24 h-24"/>
+	<AzureIcon class="w-24 h-24"/>
+	<AWSIcon class="w-24 h-24"/>
 </div>
