--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Headling from '../components/Headling.astro';
 import About from '../components/About.astro';
 import Experience from '../components/Experience.astro';
 import Skills from '../components/Skills.astro';
+import Footer from '../components/Footer.astro';
 ---
 <MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
   <main>
@@ -20,5 +21,7 @@ import Skills from '../components/Skills.astro';
     <section id="Skills" class="w-full mx-auto lg:w-[850px] py-44">
       <Skills />
     </section>
+    <section id="Footer" class="w-full">
+      <Footer />
   </main>
 </MainLayout>
