--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from '../components/About.astro';
 import Experience from '../components/Experience.astro';
 import Skills from '../components/Skills.astro';
 import Footer from '../components/Footer.astro';
+import Contact from '../components/Contact.astro';
 ---
 <MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
   <main>
@@ -21,7 +22,11 @@ import Footer from '../components/Footer.astro';
     <section id="Skills" class="w-full mx-auto lg:w-[850px] py-44">
       <Skills />
     </section>
+    <section id="contact" class="w-full mx-auto lg:w-[850px] py-44">
+      <Contact />
+    </section>
     <section id="Footer" class="w-full">
       <Footer />
+    </section>
   </main>
 </MainLayout>
