Refactor global styles and About component
- Update global.css to improve the overall styling of the website, including color scheme, font sizes, and section styling.
- Refactor the About component in About.astro to improve the readability and organization of the content.

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,22 +1,22 @@
 ---
 import Tittle from "./Tittle.astro";
 ---
+<div class="container mx-auto px-4 mt-8 md:mt-12">
+	<Tittle title="About" />
 
-<Tittle title="About" />
-<!-- <h1 class="text-5xl font-extrabold dark:text-white py-6">About</h1> -->
-
-<p class="mb-3 text-lg text-gray-300 md:text-xl dark:text-gray-400">As a 
-	Supply Chain Data Analyst at SGF Global, I specialize in transforming complex 
-	datasets into actionable insights that streamline operations and drive 
-	business growth. Leveraging my expertise in Power BI and Python, I create 
-	robust data visualizations and statistical analyses that inform strategic 
-	decisions.
-</p>
-<p class="text-gray-500 dark:text-gray-300">
-	With a solid foundation in Data Sciences from LEAD University, my approach 
-	is rooted in precision and a passion for continuous improvement. I thrive 
-	in dynamic environments where my analytical skills contribute to enhancing 
-	processes and service delivery. Looking ahead, I am eager to further refine 
-	my skills and take on more challenging projects that push the boundaries of 
-	data-driven decision-making.
-</p>
+	<p class="mb-4 text-base md:text-xl text-gray-300 dark:text-gray-400 leading-relaxed md:leading-loose">As a 
+		Supply Chain Data Analyst at SGF Global, I specialize in transforming complex 
+		datasets into actionable insights that streamline operations and drive 
+		business growth. Leveraging my expertise in Power BI and Python, I create 
+		robust data visualizations and statistical analyses that inform strategic 
+		decisions.
+	</p>
+	<p class="text-base md:text-lg text-gray-500 dark:text-gray-300 leading-relaxed md:leading-loose">
+		With a solid foundation in Data Sciences from LEAD University, my approach 
+		is rooted in precision and a passion for continuous improvement. I thrive 
+		in dynamic environments where my analytical skills contribute to enhancing 
+		processes and service delivery. Looking ahead, I am eager to further refine 
+		my skills and take on more challenging projects that push the boundaries of 
+		data-driven decision-making.
+	</p>
+</div>
