--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,8 +1,8 @@
 <a
-		target="_blank" 
-		rel="noopener"
-		class="rounded-full border border-white/10 flex justify-center 
-			items-center gap-x-2 py-3 px-5 bg-white/5 hover:scale-125"
-		{...Astro.props}>
-			<slot />
+  target="_blank" 
+  rel="noopener"
+  class="rounded-full border border-white/10 flex justify-center 
+         items-center gap-x-2 py-2 px-4 md:py-3 md:px-5 bg-white/5 hover:scale-110 transition-transform duration-300"
+  {...Astro.props}>
+  <slot />
 </a>
