--- a/src/components/Tittle.astro
+++ b/src/components/Tittle.astro
@@ -1,5 +1,5 @@
 ---
-interface Props{
+interface Props {
   title: string;
 }
 
@@ -15,7 +15,7 @@ const { title } = Astro.props;
   leading-none 
   py-6
   pb-2">
-  <a href="https://www.linkedin.com/in/gaboelc/" target="_blank" 
-		rel="noopener"></a>
-      { title }
+  <a href="https://www.linkedin.com/in/gaboelc/" target="_blank" rel="noopener" class="hover:text-orange-500">
+    { title }
+  </a>
 </h1>
