Refactor Header, Headling, and Skills components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,13 @@
 <header class="flex justify-between items-center py-3 w-full mx-auto mt-6 px-3">
   <div class="flex items-center">
     <img
-      class="w-16 h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600" 
-      src="../../public/images/Gabriel_Leon_Photo.JPG" 
-      alt="Gabriel Leon" 
+      class="w-12 h-12 md:w-16 md:h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600"
+      src="../../public/images/Gabriel_Leon_Photo.JPG"
+      alt="Gabriel Leon"
     />
   </div>
 
-  <nav class="flex flex-row gap-x-10 opacity-80">
+  <nav class="hidden md:flex flex-row gap-x-10 opacity-80">
     <a href="#About">About</a>
     <a href="#Experience">Experience</a>
     <a href="#Skills">Skills</a>
