--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,20 @@
 <footer class="rounded-lg shadow m-4 dark:bg-gray-800 text-white">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://www.linkedin.com/in/gaboelc/" class="hover:underline">Gabriel León Castro™</a>. All Rights Reserved.
+  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+    <span class="text-sm text-gray-500 text-center md:text-left dark:text-gray-400 block md:inline">© 2024 <a href="https://www.linkedin.com/in/gaboelc/" class="hover:underline">Gabriel León Castro™</a>. All Rights Reserved.
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-        <li>
-            <a href="#About" class="hover:underline me-4 md:me-6">About</a>
-        </li>
-        <li>
-            <a href="#Experience" class="hover:underline me-4 md:me-6">Experience</a>
-        </li>
-        <li>
-            <a href="#Skills" class="hover:underline me-4 md:me-6">Skills</a>
-        </li>
-        <li>
-            <a href="#" class="hover:underline">Contact</a>
-        </li>
+    <ul class="flex flex-col md:flex-row flex-wrap items-center mt-3 md:mt-0 text-sm font-medium text-gray-500 dark:text-gray-400">
+      <li>
+        <a href="#About" class="hover:underline md:mr-6 mb-2 md:mb-0">About</a>
+      </li>
+      <li>
+        <a href="#Experience" class="hover:underline md:mr-6 mb-2 md:mb-0">Experience</a>
+      </li>
+      <li>
+        <a href="#Skills" class="hover:underline md:mr-6 mb-2 md:mb-0">Skills</a>
+      </li>
+      <li>
+        <a href="#Contact" class="hover:underline">Contact</a>
+      </li>
     </ul>
-    </div>
+  </div>
 </footer>
