--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,6 +24,8 @@ const { title } = Astro.props;
   <body>
     <div class="absolute top-0 z-[-2] h-screen w-full bg-slate-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(109,120,99,0.4),rgba(242,242,242,0))]"></div>
     <Header />
-    <slot />
+    <main class="max-w-screen-lg mx-auto p-6">
+      <slot />
+    </main>
   </body>
 </html>
