--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,21 +8,21 @@ import Skills from '../components/Skills.astro';
 import Footer from '../components/Footer.astro';
 import Contact from '../components/Contact.astro';
 ---
-<MainLayout title = "Gabriel León Castro - Data Analyst Portfolio">
+<MainLayout title="Gabriel León Castro - Data Analyst Portfolio">
   <main>
-    <section class="w-full mx-auto lg:w-[850px] py-44"> 
+    <section class="w-full mx-auto lg:w-[850px] py-20 md:py-28">
       <Headling />
     </section>
-    <section id="About" class="w-full mx-auto lg:w-[850px] py-44">
+    <section id="About" class="w-full mx-auto lg:w-[850px] py-20 md:py-28">
       <About />
     </section>
-    <section id="Experience" class="w-full mx-auto lg:w-[850px] py-44">
+    <section id="Experience" class="w-full mx-auto lg:w-[850px] py-20 md:py-28">
       <Experience />
     </section>
-    <section id="Skills" class="w-full mx-auto lg:w-[850px] py-44">
+    <section id="Skills" class="w-full mx-auto lg:w-[850px] py-20 md:py-28">
       <Skills />
     </section>
-    <section id="contact" class="w-full mx-auto lg:w-[850px] py-44">
+    <section id="contact" class="w-full mx-auto lg:w-[850px] py-20 md:py-28">
       <Contact />
     </section>
     <section id="Footer" class="w-full">
