Refactor Skills component to import PowerBIIcon and remove commented code

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,6 +1,6 @@
 ---
 import Tittle from "./Tittle.astro";
-// import PowerBIIcon from "../icons/PowerbiIcon.astro";
+import PowerBIIcon from "../icons/PowerBIIcon.astro";
 import PythonIcon from "../icons/PythonIcon.astro";
 import PostgreSQLIcon from "../icons/PostgreSQLIcon.astro";
 import RLanguageIcon from "../icons/RLanguageIcon.astro";
@@ -23,7 +23,7 @@ import PandasIcon from "../icons/PandasIcon.astro";
   <PandasIcon class="w-16 h-16 md:w-24 md:h-24" />
   <PostgreSQLIcon class="w-16 h-16 md:w-24 md:h-24" />
   <MongoDBIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <!-- <PowerBIIcon class="w-16 h-16 md:w-24 md:h-24" /> -->
+  <PowerBIIcon class="w-16 h-16 md:w-24 md:h-24" />
   <TableauIcon class="w-16 h-16 md:w-24 md:h-24" />
   <PowerAppsIcon class="w-16 h-16 md:w-24 md:h-24" />
   <PowerAutomateIcon class="w-16 h-16 md:w-24 md:h-24" />
