--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -65,13 +65,13 @@ import Tittle from "./Tittle.astro";
           <svg class="w-4 h-4 mr-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
           </svg>
-          Conducted extensive analysis of customer data to identify trends. Utilized SL to clean and organize data for analysis.
+          Conducted extensive analysis of customer data to identify trends. Utilized SQL to clean and organize data for analysis.
         </li>
         <li class="flex items-baseline">
           <svg class="w-4 h-4 mr-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
           </svg>
-          Created data visualizations to communicate findings to stakeholders. Wrote SL queries to pull data for ad-hoc analysis.
+          Created data visualizations to communicate findings to stakeholders. Wrote SQL queries to pull data for ad-hoc analysis.
         </li>
       </ul>
     </li>
