Refactor Headling component to adjust layout and add hire badge link

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -12,9 +12,9 @@ const { badge } = Astro.props;
          dark:bg-blue-900 
          dark:text-blue-300
          text-sm 
-         md:text-base 
+         md:text-lg
          font-medium 
          me-2 
-         px-2.5 
-         py-0.5 
+         px-3 
+         py-1 
          rounded">{badge}</span>
