--- a/src/components/Headling.astro
+++ b/src/components/Headling.astro
@@ -8,9 +8,9 @@ import CVIcon from '../icons/CVIcon.astro';
 ---
 <div class="flex flex-col items-center justify-center container mx-auto px-4">
 	<section>
-		<div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-2 mt-4">
+		<div class="flex flex-col md:flex-row items-center justify-center flex-wrap space-y-4 md:space-y-0 md:space-x-4 mt-4 mb-4">
 		  <Tittle title="Hey, I'm Gabriel Leon Castro" />
-		  <a class="hover:scale-105" href="https://www.linkedin.com/in/gaboelc/" target="_blank" rel="noopener">
+		  <a class="hover:scale-105 mt-4 md:mt-0" href="https://www.linkedin.com/in/gaboelc/" target="_blank" rel="noopener">
 		    <Badge badge='Available for Hire!' />
 		  </a>
 		</div>
