Refactor Skills component to update technology icons and add labels

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -17,16 +17,52 @@ import PandasIcon from "../icons/PandasIcon.astro";
 <Tittle title="Technologies" />
 
 <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 justify-items-center mt-8">
-  <PythonIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <RLanguageIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <TensorFlowIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <PandasIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <PostgreSQLIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <MongoDBIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <PowerBIIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <TableauIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <PowerAppsIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <PowerAutomateIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <AzureIcon class="w-16 h-16 md:w-24 md:h-24" />
-  <AWSIcon class="w-16 h-16 md:w-24 md:h-24" />
+  <div class="flex flex-col items-center">
+    <PythonIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Python</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <RLanguageIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">R Language</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <TensorFlowIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">TensorFlow</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <PandasIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Pandas</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <PostgreSQLIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">PostgreSQL</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <MongoDBIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">MongoDB</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <PowerBIIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Power BI</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <TableauIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Tableau</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <PowerAppsIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Power Apps</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <PowerAutomateIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Power Automate</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <AzureIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">Azure</span>
+  </div>
+  <div class="flex flex-col items-center">
+    <AWSIcon class="w-16 h-16 md:w-24 md:h-24" />
+    <span class="mt-2 text-sm md:text-base text-gray-400 dark:text-gray-300">AWS</span>
+  </div>
 </div>
