--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer class="rounded-lg shadow m-4 dark:bg-gray-800 text-white">
   <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="text-sm text-gray-500 text-center md:text-left dark:text-gray-400 block md:inline">© 2024 <a href="https://www.linkedin.com/in/gaboelc/" class="hover:underline">Gabriel León Castro™</a>. All Rights Reserved.
+    <span class="text-sm text-gray-500 text-center md:text-left dark:text-gray-400 block md:inline">© 2024 <a href="https://www.linkedin.com/in/gaboelc/" class="hover:underline">Gabriel León Castro™</a>.
     </span>
     <ul class="flex flex-col md:flex-row flex-wrap items-center mt-3 md:mt-0 text-sm font-medium text-gray-500 dark:text-gray-400">
       <li>
